markup till features

--- a/index.html
+++ b/index.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>HW-01</title>
-</head>
-<body>
-    <p>HW-01</p>
-</body>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="/"><img src="./images/web_studio_logo.svg" alt="Logo" /></a>
+        <ul>
+          <li><a href="">Студия</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li>
+          <a href="mailto:info@devstudio.com">
+            <img src="./images/envelope.svg" alt="Envelope" />
+            info@devstudio.com
+          </a>
+        </li>
+        <li>
+          <a href="tel:+380962477532">
+            <img src="./images/smartphone.svg" alt="Smartphone" />
+            +38 096 247 75 32
+          </a>
+        </li>
+      </ul>
+    </header>
+    <div>
+        <section>
+            <!-- style="text-transform:uppercase" -->
+            <h1>Эффективные решения <br>для вашего бизнеса</h1>
+            <button>Заказать услугу</button>
+        </section>
+    </div>
+    <!-- features -->
+    <section>
+        <ul>
+            <li></li>
+        </ul>
+    </section>
+  </body>
 </html>
