--- a/index.html
+++ b/index.html
@@ -31,18 +31,57 @@
         </li>
       </ul>
     </header>
+
     <div>
-        <section>
-            <!-- style="text-transform:uppercase" -->
-            <h1>Эффективные решения <br>для вашего бизнеса</h1>
-            <button>Заказать услугу</button>
-        </section>
+      <section>
+        <!-- style="text-transform:uppercase" -->
+        <h1>Эффективные решения <br />для вашего бизнеса</h1>
+        <button>Заказать услугу</button>
+      </section>
     </div>
-    <!-- features -->
+
+    <!-- features section -->
     <section>
-        <ul>
-            <li></li>
-        </ul>
+      <ul>
+        <li>
+          <!-- rectangle W270 H120 missed -->
+          <img src="./images/antenna_1.svg" alt="Antenna" />
+          <h2>Внимание к деталям</h2>
+          <p>
+            Идейные соображения, а также начало повседневной работы по
+            формированию позиции.
+          </p>
+        </li>
+        <li>
+          <!-- rectangle W270 H120 missed -->
+          <img src="./images/clock_1.svg" alt="Clock" />
+          <h2>Пунктуальность</h2>
+          <p>
+            Задача организации, в особенности же рамки и место обучения кадров
+            влечет за собой.
+          </p>
+        </li>
+        <li>
+          <!-- rectangle W270 H120 missed -->
+          <img src="./images/diagram_1.svg" alt="Diagram" />
+          <h2>Планирование</h2>
+          <p>
+            Равным образом консультация с широким активом в значительной степени
+            обуславливает.
+          </p>
+        </li>
+        <li>
+          <!-- rectangle W270 H120 missed -->
+          <img src="./images/astronaut_1.svg" alt="Astronaut" />
+          <h2>Современные технологии</h2>
+          <p>
+            Значимость этих проблем настолько очевидна, что реализация плановых
+            заданий.
+          </p>
+        </li>
+      </ul>
     </section>
+
+    
   </body>
 </html>
