--- a/index.html
+++ b/index.html
@@ -82,6 +82,28 @@
       </ul>
     </section>
 
-    
+    <!-- what we do section-->
+    <section>
+      <h2>Чем мы занимаемся</h2>
+      <ul>
+        <li>
+          <img src="./images/img_desctop_apps.png" alt="Desctop Applications">
+          <h3>Десктопные приложения</h3>
+        </li>
+        <li>
+          <img src="./images/img_mob_apps.png" alt="Mobile Applications">
+          <h3>Мобильные приложения</h3>
+        </li>
+        <li>
+          <img src="./images/img_design_decisions.png" alt="Design Decisions">
+          <h3>Дизайнерские решения</h3>
+        </li>
+      </ul>
+    </section>
+
+    <!-- our team section -->
+    <section>
+      
+    </section>
   </body>
 </html>
