--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <div>
       <section>
-        <!-- style="text-transform:uppercase" -->
+        <img src="/images/header_img.png" alt="Team" />
         <h1>Эффективные решения <br />для вашего бизнеса</h1>
         <button>Заказать услугу</button>
       </section>
@@ -87,15 +87,15 @@
       <h2>Чем мы занимаемся</h2>
       <ul>
         <li>
-          <img src="./images/img_desctop_apps.png" alt="Desctop Applications">
+          <img src="./images/img_desctop_apps.png" alt="Desctop Applications" />
           <h3>Десктопные приложения</h3>
         </li>
         <li>
-          <img src="./images/img_mob_apps.png" alt="Mobile Applications">
+          <img src="./images/img_mob_apps.png" alt="Mobile Applications" />
           <h3>Мобильные приложения</h3>
         </li>
         <li>
-          <img src="./images/img_design_decisions.png" alt="Design Decisions">
+          <img src="./images/img_design_decisions.png" alt="Design Decisions" />
           <h3>Дизайнерские решения</h3>
         </li>
       </ul>
@@ -103,7 +103,57 @@
 
     <!-- our team section -->
     <section>
-      
+      <h2>Наша команда</h2>
+      <ul>
+        <li>
+          <img src="/images/product_designer.png" alt="Product Designer" />
+          <h3>Николай Кучеренко</h3>
+          <p>Product Designer</p>
+          <!-- social links -->
+          <ul>
+            <li><a href="/"><img src="./images/instagram.svg" alt="Instagram"></a></li>
+            <li><a href="/"><img src="./images/twitter_1.svg" alt="Twitter"></a></li>
+            <li><a href="/"><img src="./images/facebook_1.svg" alt="Facebook"></a></li>
+            <li><a href="/"><img src="./images/linkedin_1.svg" alt="LinkedIn"></a></li>
+          </ul>
+        </li>
+        <li>
+          <img src="/images/frontend_developer.png" alt="Frontend Developer" />
+          <h3>Ольга Иванова</h3>
+          <p>Frontend Developer</p>
+          <!-- social links -->
+          <ul>
+            <li><a href="/"><img src="./images/instagram.svg" alt="Instagram"></a></li>
+            <li><a href="/"><img src="./images/twitter_1.svg" alt="Twitter"></a></li>
+            <li><a href="/"><img src="./images/facebook_1.svg" alt="Facebook"></a></li>
+            <li><a href="/"><img src="./images/linkedin_1.svg" alt="LinkedIn"></a></li>
+          </ul>
+        </li>
+        <li>
+          <img src="/images/marketing.png" alt="Marketing" />
+          <h3>Андрей Шевченко</h3>
+          <p>Marketing</p>
+          <!-- social links -->
+          <ul>
+            <li><a href="/"><img src="./images/instagram.svg" alt="Instagram"></a></li>
+            <li><a href="/"><img src="./images/twitter_1.svg" alt="Twitter"></a></li>
+            <li><a href="/"><img src="./images/facebook_1.svg" alt="Facebook"></a></li>
+            <li><a href="/"><img src="./images/linkedin_1.svg" alt="LinkedIn"></a></li>
+          </ul>
+        </li>
+        <li>
+          <img src="/images/ui_designer.png" alt="UI Designerr" />
+          <h3>Иван Николаев</h3>
+          <p>UI Designer</p>
+          <!-- social links -->
+          <ul>
+            <li><a href="/"><img src="./images/instagram.svg" alt="Instagram"></a></li>
+            <li><a href="/"><img src="./images/twitter_1.svg" alt="Twitter"></a></li>
+            <li><a href="/"><img src="./images/facebook_1.svg" alt="Facebook"></a></li>
+            <li><a href="/"><img src="./images/linkedin_1.svg" alt="LinkedIn"></a></li>
+          </ul>
+        </li>
+      </ul>
     </section>
   </body>
 </html>
