--- a/index.html
+++ b/index.html
@@ -111,10 +111,24 @@
           <p>Product Designer</p>
           <!-- social links -->
           <ul>
-            <li><a href="/"><img src="./images/instagram.svg" alt="Instagram"></a></li>
-            <li><a href="/"><img src="./images/twitter_1.svg" alt="Twitter"></a></li>
-            <li><a href="/"><img src="./images/facebook_1.svg" alt="Facebook"></a></li>
-            <li><a href="/"><img src="./images/linkedin_1.svg" alt="LinkedIn"></a></li>
+            <li>
+              <a href="/"
+                ><img src="./images/instagram.svg" alt="Instagram"
+              /></a>
+            </li>
+            <li>
+              <a href="/"><img src="./images/twitter_1.svg" alt="Twitter" /></a>
+            </li>
+            <li>
+              <a href="/"
+                ><img src="./images/facebook_1.svg" alt="Facebook"
+              /></a>
+            </li>
+            <li>
+              <a href="/"
+                ><img src="./images/linkedin_1.svg" alt="LinkedIn"
+              /></a>
+            </li>
           </ul>
         </li>
         <li>
@@ -123,10 +137,24 @@
           <p>Frontend Developer</p>
           <!-- social links -->
           <ul>
-            <li><a href="/"><img src="./images/instagram.svg" alt="Instagram"></a></li>
-            <li><a href="/"><img src="./images/twitter_1.svg" alt="Twitter"></a></li>
-            <li><a href="/"><img src="./images/facebook_1.svg" alt="Facebook"></a></li>
-            <li><a href="/"><img src="./images/linkedin_1.svg" alt="LinkedIn"></a></li>
+            <li>
+              <a href="/"
+                ><img src="./images/instagram.svg" alt="Instagram"
+              /></a>
+            </li>
+            <li>
+              <a href="/"><img src="./images/twitter_1.svg" alt="Twitter" /></a>
+            </li>
+            <li>
+              <a href="/"
+                ><img src="./images/facebook_1.svg" alt="Facebook"
+              /></a>
+            </li>
+            <li>
+              <a href="/"
+                ><img src="./images/linkedin_1.svg" alt="LinkedIn"
+              /></a>
+            </li>
           </ul>
         </li>
         <li>
@@ -135,10 +163,24 @@
           <p>Marketing</p>
           <!-- social links -->
           <ul>
-            <li><a href="/"><img src="./images/instagram.svg" alt="Instagram"></a></li>
-            <li><a href="/"><img src="./images/twitter_1.svg" alt="Twitter"></a></li>
-            <li><a href="/"><img src="./images/facebook_1.svg" alt="Facebook"></a></li>
-            <li><a href="/"><img src="./images/linkedin_1.svg" alt="LinkedIn"></a></li>
+            <li>
+              <a href="/"
+                ><img src="./images/instagram.svg" alt="Instagram"
+              /></a>
+            </li>
+            <li>
+              <a href="/"><img src="./images/twitter_1.svg" alt="Twitter" /></a>
+            </li>
+            <li>
+              <a href="/"
+                ><img src="./images/facebook_1.svg" alt="Facebook"
+              /></a>
+            </li>
+            <li>
+              <a href="/"
+                ><img src="./images/linkedin_1.svg" alt="LinkedIn"
+              /></a>
+            </li>
           </ul>
         </li>
         <li>
@@ -147,13 +189,64 @@
           <p>UI Designer</p>
           <!-- social links -->
           <ul>
-            <li><a href="/"><img src="./images/instagram.svg" alt="Instagram"></a></li>
-            <li><a href="/"><img src="./images/twitter_1.svg" alt="Twitter"></a></li>
-            <li><a href="/"><img src="./images/facebook_1.svg" alt="Facebook"></a></li>
-            <li><a href="/"><img src="./images/linkedin_1.svg" alt="LinkedIn"></a></li>
+            <li>
+              <a href="/"
+                ><img src="./images/instagram.svg" alt="Instagram"
+              /></a>
+            </li>
+            <li>
+              <a href="/"><img src="./images/twitter_1.svg" alt="Twitter" /></a>
+            </li>
+            <li>
+              <a href="/"
+                ><img src="./images/facebook_1.svg" alt="Facebook"
+              /></a>
+            </li>
+            <li>
+              <a href="/"
+                ><img src="./images/linkedin_1.svg" alt="LinkedIn"
+              /></a>
+            </li>
           </ul>
         </li>
       </ul>
     </section>
+
+    <!-- our clients section -->
+    <section>
+      <h2>Постоянные клиенты</h2>
+      <ul>
+        <li>
+          <a href=""><img src="./images/client_1.svg" alt="Client 1" /></a>
+        </li>
+        <li>
+          <a href=""><img src="./images/client_2.svg" alt="Client 2" /></a>
+        </li>
+        <li>
+          <a href=""><img src="./images/client_3.svg" alt="Client 3" /></a>
+        </li>
+        <li>
+          <a href=""><img src="./images/client_4.svg" alt="Client 4" /></a>
+        </li>
+        <li>
+          <a href=""><img src="./images/client_5.svg" alt="Client 5" /></a>
+        </li>
+        <li>
+          <a href=""><img src="./images/client_6.svg" alt="Client 6" /></a>
+        </li>
+      </ul>
+    </section>
+
+    <footer>
+      <a href="/"><img src="./images/web_studio_logo.svg" alt="Logo" /></a>
+      <address>
+        <ul>
+          <li>г. Киев, пр-т Леси Украинки, 26</li>
+          <li><a href="mailto:info@example.com">info@example.com</a></li>
+          <li><a href="tel:+380962477532">+38 096 247 75 32</a></li>
+        </ul>
+      </address>
+    </footer>
+
   </body>
 </html>
