--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <div>
       <section>
-        <img src="/images/header_img.png" alt="Team" />
+        <img src="./images/header_img.png" alt="Team" />
         <h1>Эффективные решения <br />для вашего бизнеса</h1>
         <button>Заказать услугу</button>
       </section>
@@ -247,6 +247,5 @@
         </ul>
       </address>
     </footer>
-
   </body>
 </html>
