--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <h2>Наша команда</h2>
       <ul>
         <li>
-          <img src="/images/product_designer.png" alt="Product Designer" />
+          <img src="./images/product_designer.png" alt="Product Designer" />
           <h3>Николай Кучеренко</h3>
           <p>Product Designer</p>
           <!-- social links -->
@@ -132,7 +132,7 @@
           </ul>
         </li>
         <li>
-          <img src="/images/frontend_developer.png" alt="Frontend Developer" />
+          <img src="./images/frontend_developer.png" alt="Frontend Developer" />
           <h3>Ольга Иванова</h3>
           <p>Frontend Developer</p>
           <!-- social links -->
@@ -158,7 +158,7 @@
           </ul>
         </li>
         <li>
-          <img src="/images/marketing.png" alt="Marketing" />
+          <img src="./images/marketing.png" alt="Marketing" />
           <h3>Андрей Шевченко</h3>
           <p>Marketing</p>
           <!-- social links -->
@@ -184,7 +184,7 @@
           </ul>
         </li>
         <li>
-          <img src="/images/ui_designer.png" alt="UI Designerr" />
+          <img src="./images/ui_designer.png" alt="UI Designerr" />
           <h3>Иван Николаев</h3>
           <p>UI Designer</p>
           <!-- social links -->
@@ -247,5 +247,6 @@
         </ul>
       </address>
     </footer>
+    
   </body>
 </html>
