--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>HW-01</title>
   </head>
   <body>
+    <input type="checkbox"></input>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
     <header>
       <nav>
         <a href="/"><img src="./images/web_studio_logo.svg" alt="Logo" /></a>
@@ -247,6 +255,6 @@
         </ul>
       </address>
     </footer>
-    
+
   </body>
 </html>
