--- a/index.html
+++ b/index.html
@@ -240,12 +240,13 @@
     <footer>
       <a href="/"><img src="./images/web_studio_logo.svg" alt="Logo" /></a>
       <address>
-        <ul>
-          <li>г. Киев, пр-т Леси Украинки, 26</li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380962477532">+38 096 247 75 32</a></li>
-        </ul>
+        <p>г. Киев, пр-т Леси Украинки, 26</p>
       </address>
+      <a href="mailto:info@example.com">info@example.com</a>
+      <a href="tel:+380962477532">+38 096 247 75 32</a>
+      <!-- TODO: -->
+      <div></div>
+      <div></div>
     </footer>
   </body>
 </html>
