--- a/index.html
+++ b/index.html
@@ -1,251 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <title>HW-01</title>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <a href="/"><img src="./images/web_studio_logo.svg" alt="Logo" /></a>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
-        </ul>
-      </nav>
-      <ul>
-        <li>
-          <a href="mailto:info@devstudio.com">
-            <img src="./images/envelope.svg" alt="Envelope" />
-            info@devstudio.com
-          </a>
-        </li>
-        <li>
-          <a href="tel:+380962477532">
-            <img src="./images/smartphone.svg" alt="Smartphone" />
-            +38 096 247 75 32
-          </a>
-        </li>
-      </ul>
-    </header>
-
-    <div>
-      <section>
-        <img src="./images/header_img.png" alt="Team" />
-        <h1>Эффективные решения <br />для вашего бизнеса</h1>
-        <button>Заказать услугу</button>
-      </section>
-    </div>
-
-    <!-- features section -->
-    <section>
-      <ul>
-        <li>
-          <!-- rectangle W270 H120 missed -->
-          <img src="./images/antenna_1.svg" alt="Antenna" />
-          <h2>Внимание к деталям</h2>
-          <p>
-            Идейные соображения, а также начало повседневной работы по
-            формированию позиции.
-          </p>
-        </li>
-        <li>
-          <!-- rectangle W270 H120 missed -->
-          <img src="./images/clock_1.svg" alt="Clock" />
-          <h2>Пунктуальность</h2>
-          <p>
-            Задача организации, в особенности же рамки и место обучения кадров
-            влечет за собой.
-          </p>
-        </li>
-        <li>
-          <!-- rectangle W270 H120 missed -->
-          <img src="./images/diagram_1.svg" alt="Diagram" />
-          <h2>Планирование</h2>
-          <p>
-            Равным образом консультация с широким активом в значительной степени
-            обуславливает.
-          </p>
-        </li>
-        <li>
-          <!-- rectangle W270 H120 missed -->
-          <img src="./images/astronaut_1.svg" alt="Astronaut" />
-          <h2>Современные технологии</h2>
-          <p>
-            Значимость этих проблем настолько очевидна, что реализация плановых
-            заданий.
-          </p>
-        </li>
-      </ul>
-    </section>
-
-    <!-- what we do section-->
-    <section>
-      <h2>Чем мы занимаемся</h2>
-      <ul>
-        <li>
-          <img src="./images/img_desctop_apps.png" alt="Desctop Applications" />
-          <h3>Десктопные приложения</h3>
-        </li>
-        <li>
-          <img src="./images/img_mob_apps.png" alt="Mobile Applications" />
-          <h3>Мобильные приложения</h3>
-        </li>
-        <li>
-          <img src="./images/img_design_decisions.png" alt="Design Decisions" />
-          <h3>Дизайнерские решения</h3>
-        </li>
-      </ul>
-    </section>
-
-    <!-- our team section -->
-    <section>
-      <h2>Наша команда</h2>
-      <ul>
-        <li>
-          <img src="./images/product_designer.png" alt="Product Designer" />
-          <h3>Николай Кучеренко</h3>
-          <p>Product Designer</p>
-          <!-- social links -->
-          <ul>
-            <li>
-              <a href="/"
-                ><img src="./images/instagram.svg" alt="Instagram"
-              /></a>
-            </li>
-            <li>
-              <a href="/"><img src="./images/twitter_1.svg" alt="Twitter" /></a>
-            </li>
-            <li>
-              <a href="/"
-                ><img src="./images/facebook_1.svg" alt="Facebook"
-              /></a>
-            </li>
-            <li>
-              <a href="/"
-                ><img src="./images/linkedin_1.svg" alt="LinkedIn"
-              /></a>
-            </li>
-          </ul>
-        </li>
-        <li>
-          <img src="./images/frontend_developer.png" alt="Frontend Developer" />
-          <h3>Ольга Иванова</h3>
-          <p>Frontend Developer</p>
-          <!-- social links -->
-          <ul>
-            <li>
-              <a href="/"
-                ><img src="./images/instagram.svg" alt="Instagram"
-              /></a>
-            </li>
-            <li>
-              <a href="/"><img src="./images/twitter_1.svg" alt="Twitter" /></a>
-            </li>
-            <li>
-              <a href="/"
-                ><img src="./images/facebook_1.svg" alt="Facebook"
-              /></a>
-            </li>
-            <li>
-              <a href="/"
-                ><img src="./images/linkedin_1.svg" alt="LinkedIn"
-              /></a>
-            </li>
-          </ul>
-        </li>
-        <li>
-          <img src="./images/marketing.png" alt="Marketing" />
-          <h3>Андрей Шевченко</h3>
-          <p>Marketing</p>
-          <!-- social links -->
-          <ul>
-            <li>
-              <a href="/"
-                ><img src="./images/instagram.svg" alt="Instagram"
-              /></a>
-            </li>
-            <li>
-              <a href="/"><img src="./images/twitter_1.svg" alt="Twitter" /></a>
-            </li>
-            <li>
-              <a href="/"
-                ><img src="./images/facebook_1.svg" alt="Facebook"
-              /></a>
-            </li>
-            <li>
-              <a href="/"
-                ><img src="./images/linkedin_1.svg" alt="LinkedIn"
-              /></a>
-            </li>
-          </ul>
-        </li>
-        <li>
-          <img src="./images/ui_designer.png" alt="UI Designerr" />
-          <h3>Иван Николаев</h3>
-          <p>UI Designer</p>
-          <!-- social links -->
-          <ul>
-            <li>
-              <a href="/"
-                ><img src="./images/instagram.svg" alt="Instagram"
-              /></a>
-            </li>
-            <li>
-              <a href="/"><img src="./images/twitter_1.svg" alt="Twitter" /></a>
-            </li>
-            <li>
-              <a href="/"
-                ><img src="./images/facebook_1.svg" alt="Facebook"
-              /></a>
-            </li>
-            <li>
-              <a href="/"
-                ><img src="./images/linkedin_1.svg" alt="LinkedIn"
-              /></a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </section>
-
-    <!-- our clients section -->
-    <section>
-      <h2>Постоянные клиенты</h2>
-      <ul>
-        <li>
-          <a href=""><img src="./images/client_1.svg" alt="Client 1" /></a>
-        </li>
-        <li>
-          <a href=""><img src="./images/client_2.svg" alt="Client 2" /></a>
-        </li>
-        <li>
-          <a href=""><img src="./images/client_3.svg" alt="Client 3" /></a>
-        </li>
-        <li>
-          <a href=""><img src="./images/client_4.svg" alt="Client 4" /></a>
-        </li>
-        <li>
-          <a href=""><img src="./images/client_5.svg" alt="Client 5" /></a>
-        </li>
-        <li>
-          <a href=""><img src="./images/client_6.svg" alt="Client 6" /></a>
-        </li>
-      </ul>
-    </section>
-
-    <footer>
-      <a href="/"><img src="./images/web_studio_logo.svg" alt="Logo" /></a>
-      <address>
-        <ul>
-          <li>г. Киев, пр-т Леси Украинки, 26</li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380962477532">+38 096 247 75 32</a></li>
-        </ul>
-      </address>
-    </footer>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  
+</body>
 </html>
