--- a/index.html
+++ b/index.html
@@ -1,12 +1,71 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/styles.css">
-  <title>HW-01</title>
-</head>
-<body>
-  
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./css/styles.css" />
+		<title>WebStudio</title>
+	</head>
+	<body>
+		<header>
+			<nav>
+				<!-- logo -->
+				<a href="/">WebStudio</a>
+				<!-- navigation list -->
+				<ul>
+					<li><a href="">Студия</a></li>
+					<li><a href="">Портфолио</a></li>
+					<li><a href="">Контакты</a></li>
+				</ul>
+			</nav>
+			<!-- tel & mail -->
+			<ul>
+				<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+				<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+			</ul>
+    </header>
+    
+    <!-- hero -->
+		<div>
+			<section>
+				<h1>Эффективные решения для вашего бизнеса</h1>
+				<button type="button">Заказать услугу</button>
+			</section>
+    </div>
+    
+    <!-- features section -->
+    <section>
+      <!-- TODO: invisible heading -->
+      <h2>Наши Особенности</h2>
+      <ul>
+        <li>
+          <h3>Внимание к деталям</h3>
+          <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+        </li>
+        <li>
+          <h3>Пунктуальность</h3>
+          <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+        </li>
+        <li>
+          <h3>Планирование</h3>
+          <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+        </li>
+        <li>
+          <h3>Современные технологии</h3>
+          <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+        </li>
+      </ul>
+    </section>
+
+    <!-- What are we doing section -->
+    <section>
+      <ul>
+        <li><a href=""><img src="" alt=""></a></li>
+        <li><a href=""><img src="" alt=""></a></li>
+        <li><a href=""><img src="" alt=""></a></li>
+      </ul>
+    </section>
+
+		<footer></footer>
+	</body>
 </html>
