--- a/index.html
+++ b/index.html
@@ -59,12 +59,41 @@
 
     <!-- What are we doing section -->
     <section>
+      <h2>Чем мы занимаемся</h2>
       <ul>
-        <li><a href=""><img src="" alt=""></a></li>
-        <li><a href=""><img src="" alt=""></a></li>
-        <li><a href=""><img src="" alt=""></a></li>
+        <li><a href=""><img src="./images/img1.jpg" alt="Две руки на клавиатуре настольного компьютера"></a></li>
+        <li><a href=""><img src="./images/img2.jpg" alt="Мобильный телефон в левой руке"></a></li>
+        <li><a href=""><img src="./images/img3.jpg" alt="Планшет в левой руке"></a></li>
       </ul>
     </section>
+
+    <!-- Our Team section -->
+    <section>
+      <h2>Наша команда</h2>
+      <ul>
+        <li>
+          <img src="./images/imgproductdesigner.jpg" alt="Улыбающийся мужчина в очках с бородой">
+          <h3>Product Designer</h3>
+          <p>Игорь Демьяненко</p>
+        </li>
+        <li>
+          <img src="./images/imgfrontenddeveloper.jpg" alt="Улыбающаяся женщина в очках с длинными волосами">
+          <h3>Frontend Developer</h3>
+          <p>Ольга Репина</p>
+        </li>
+        <li>
+          <img src="./images/imgmarketing.jpg" alt="Улыбающийся мужчина">
+          <h3>Marketing</h3>
+          <p>Николай Тарасов</p>
+        </li>
+        <li>
+          <img src="./images/imguidesigner.jpg" alt="Улыбающийся мужчина в очках с бородой">
+          <h3>UI Designer</h3>
+          <p>Михаил Ермаков</p>
+        </li>
+      </ul>
+    </section>
+    
 
 		<footer></footer>
 	</body>
