--- a/index.html
+++ b/index.html
@@ -62,17 +62,9 @@
 			<section>
 				<h2>Чем мы занимаемся</h2>
 				<ul>
-					<li>
-						<a href="">
-							<img src="./images/img1.jpg" width="370" alt="Две руки на клавиатуре настольного компьютера" />
-						</a>
-					</li>
-					<li>
-						<a href=""><img src="./images/img2.jpg" width="370" alt="Мобильный телефон в левой руке" /></a>
-					</li>
-					<li>
-						<a href=""><img src="./images/img3.jpg" width="370" alt="Планшет в левой руке" /></a>
-					</li>
+					<li><img src="./images/img1.jpg" width="370" alt="Две руки на клавиатуре настольного компьютера" /></li>
+					<li><img src="./images/img2.jpg" width="370" alt="Мобильный телефон в левой руке" /></li>
+					<li><img src="./images/img3.jpg" width="370" alt="Планшет в левой руке" /></li>
 				</ul>
 			</section>
 
